--- a/Avalonia.LibMpv.Sample/Avalonia.LibMpv.Sample.csproj
+++ b/Avalonia.LibMpv.Sample/Avalonia.LibMpv.Sample.csproj
@@ -7,9 +7,7 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <None Include="..\..\mpv\mpv-dev-x86_64\libmpv-2.dll" Link="libmpv-2.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    <None Include="..\mpv\mpv-dev-x86_64\libmpv-2.dll" Link="libmpv-2.dll" />
   </ItemGroup>
 
 
