--- a/samples/Avalonia.LibMpv.Sample/Avalonia.LibMpv.Sample.csproj
+++ b/samples/Avalonia.LibMpv.Sample/Avalonia.LibMpv.Sample.csproj
@@ -8,18 +8,18 @@
   </PropertyGroup>
   <ItemGroup>
     <None Include="..\..\mpv\mpv-dev-x86_64\libmpv-2.dll" Link="libmpv-2.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
 
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="11.0.0-preview7" />
-    <PackageReference Include="Avalonia.Desktop" Version="11.0.0-preview7" />
-    <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.0-preview7" />
-    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.0-preview7" />
+    <PackageReference Include="Avalonia" Version="11.0.999-cibuild0037568-beta" />
+    <PackageReference Include="Avalonia.Desktop" Version="11.0.999-cibuild0037568-beta" />
+    <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.999-cibuild0037568-beta" />
+    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.999-cibuild0037568-beta" />
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
-    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.0-preview7" />
+    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.999-cibuild0037568-beta" />
   </ItemGroup>
 
 
