--- a/src/Samples/IptvPlayer/IptvPlayer.Desktop/IptvPlayer.Desktop.csproj
+++ b/src/Samples/IptvPlayer/IptvPlayer.Desktop/IptvPlayer.Desktop.csproj
@@ -1,16 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <!--If you are willing to use Windows/MacOS native APIs you will need to create 3 projects.
-    One for Windows with net7.0-windows TFM, one for MacOS with net7.0-macos and one with net7.0 TFM for Linux.-->
-    <TargetFramework>net7.0-windows</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
+	  <RuntimeIdentifiers>win-x64;win-x86;linux-x64;linux-arm64</RuntimeIdentifiers>
     <Nullable>enable</Nullable>
     <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
-  <ItemGroup>
-    <Compile Include="..\Player.Avalonia.Desktop\Program.cs" Link="Program.cs" />
-  </ItemGroup>
 
 	<ItemGroup>
 		<None Include="..\..\..\..\natives\windows\x86\libmpv-2.dll" Link="x86\libmpv-2.dll">
@@ -20,13 +16,12 @@
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 	</ItemGroup>
-
-	<ItemGroup>
-    <PackageReference Include="Avalonia.Desktop" Version="11.0.4" />
+	
+  <ItemGroup>
+    <PackageReference Include="Avalonia.Desktop" Version="$(AvaloniaVersion)" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\LibMpv.Client\LibMpv.Client.csproj" />
-    <ProjectReference Include="..\Player.Avalonia\Player.Avalonia.csproj" />
+    <ProjectReference Include="..\IptvPlayer\IptvPlayer.csproj" />
   </ItemGroup>
 </Project>
