--- a/src/Samples/IptvPlayer/IptvPlayer.Core/IptvPlayer.Core.csproj
+++ b/src/Samples/IptvPlayer/IptvPlayer.Core/IptvPlayer.Core.csproj
@@ -1,8 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\LibMpv.MVVM\LibMpv.MVVM.csproj" />
+  </ItemGroup>
 
 </Project>
